# excel-to-engine

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  PLAN_V3.md  PLAN_V4.md  README.md  ROADMAP.md  package-lock.json  package.json
auto-iterate/: .gitignore  Dockerfile  blind-eval.mjs  generate-questions.mjs  iterate.mjs  package.json  run.sh
cli/: format.mjs  index.mjs
container/: Dockerfile  package-lock.json  package.json  pipeline.mjs  validate-extraction.mjs
docs/: LOG-rust-pipeline.md  PLAN-rust-pipeline-crate.md  PLAN-rust-pipeline.md
eval/: .env.example  .gitignore  Dockerfile  analyze-report.mjs  blind-eval.mjs  eval-loop.mjs  generate-questions.mjs  iterate.mjs  package.json  per-sheet-eval.mjs  pipeline.mjs  run-all.mjs  run.sh  validate-engine.mjs
eval-framework/: BLIND_TEST_CLAUDE.md  BLIND_TEST_INSTRUCTIONS.md  README.md  analyze-failures.mjs  auto-eval.mjs  compare-outputs.mjs  generate-control.mjs  run-blind-eval.sh
lib/: calibration.mjs  excel-parser.mjs  irr.mjs  manifest.mjs  self-eval.mjs  sensitivity.mjs  waterfall.mjs
rust-parser/: Cargo.toml  LOG-rust-pipeline.md  PLAN-rust-pipeline.md
rust-parser/src/: chunked_emitter.rs  dependency.rs  formula_ast.rs  main.rs  model_map.rs  parser.rs  sheet_partition.rs  transpiler.rs
rust-parser/tests/: create-test-workbook.mjs  smoke-chunked.mjs
rust-parser/tests/output/: dependency-graph.json  formulas.json  model-map.json  raw-engine.js
scripts/: check-env.mjs
skill/: SKILL.md
templates/: README.md  eval-template.mjs  outpost-platform.json  pe-fund-generic.json  (+2 more)
(+60 files in other folders)
