[package]
name = "rust-parser"
version = "0.1.0"
edition = "2021"
description = "Fast Excel parser and formula transpiler for excel-to-engine pipeline"

[[bin]]
name = "rust-parser"
path = "src/main.rs"

[dependencies]
calamine = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
